refactor: add sections-wrapper

--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -57,7 +57,7 @@
         </li>
       </ul>
     </section>
-
+<div class="index-columns">
     <section class="news">
       <h2>Новости</h2>
       <ul class="news-list">
@@ -83,7 +83,8 @@
       <button class="btn gallery-btn gallery-btn-back" type="button" disabled>Назад</button>
       <button class="btn gallery-btn gallery-btn-next" type="button">Вперед</button>
     </section>
-
+  </div>
+  <div class="index-columns">
     <section class="contacts">
       <h2>Контактная информация</h2>
       <p>
@@ -123,6 +124,7 @@
         <button class="btn" type="submit">Отправить</button>
       </form>
     </section>
+    </div>
   </main>
 
   <footer class="main-footer">
